platform/k8s/base/services/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: atlas
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: payment
        component: backend
    spec:
      containers:
        - name: payment
          image: nitros64/payment-service:1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
              name: http

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8088
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 45

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8088
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8088
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
