platform/k8s/base/services/payment/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-payment
spec:
  serviceName: postgres-payment
  replicas: 1
  selector:
    matchLabels:
      app: postgres-payment
  template:
    metadata:
      labels:
        app: postgres-payment
    spec:
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-payment-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "25m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"     
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - payment
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - payment
            initialDelaySeconds: 30
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: postgres-payment-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
