platform/k8s/base/services/payment/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-payment
spec:
  selector:
    app: postgres-payment
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
