platform/k8s/base/services/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - name: http
      port: 80
      targetPort: 8088
  type: ClusterIP
