platform/k8s/base/services/payment/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-payment-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: postgres-payment
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment
      ports:
        - protocol: TCP
          port: 5432
